[gd_scene load_steps=3 format=3 uid="uid://dqh4yjyrjtjrp"]

[ext_resource type="Script" uid="uid://chylt7063lp7k" path="res://scene/game/boost_shop/boost_buton/boost_button.gd" id="1_0i1e1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0i1e1"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="BoostButton" type="Button"]
offset_right = 8.0
offset_bottom = 8.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/disabled = SubResource("StyleBoxFlat_0i1e1")
script = ExtResource("1_0i1e1")

[node name="Frame" type="TextureRect" parent="."]
custom_minimum_size = Vector2(125, 125)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -89.5
offset_right = 57.5
offset_bottom = 35.5
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Frame"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoostIcon" type="TextureRect" parent="Frame/CenterContainer"]
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
expand_mode = 3
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.023809524
anchor_top = 0.715625
anchor_right = 0.97619045
anchor_bottom = 0.953125
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="BoostName" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
autowrap_mode = 3
max_lines_visible = 2

[node name="BoostPrice" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "
"
horizontal_alignment = 1
